 * Many bugs related to the wrap world edge fixed (but not all)
 * Sudden Death always came exactly 1 turn later than planned

Game, gameplay:
 + Increase hedgehog limit to 64
 + Remove rubber duck
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix sine gun dealing damage to attacker if shooting up
 * Fix Sudden Death starting in the second turn of a round rather than the first
 * Fix hammer and pickhammer not digging correctly at wrap world edge
 * Fix drill rocket exploding when digging at bounce/wrap world edge
 * Fix freezer ray not working through wrap world edge
 * Fix freezer ray going through bounce world edge
 * Fix cake walking through bounce world edge
 * Fix cake walking through land when reaching wrap world edge
 * Laser sight now works properly through wrap world edge
 * Fix projectiles behaving incorrectly with land just behind the wrap world edge
 * Fix bee weapon becoming unusable when hitting attack key in mid-air
 * Limit hedgehog health to 268435455 to prevent some bugs

Game, controls and commands:
 + Add new key to show mission panel (default: M)
 + Add new key to cycle through timer values (default: N)
 + Add default controls for controller (see README.md)
 + Add chat command “/help”, displays help for chat commands
 + Rename chat command “/team” to “/clan” (but “/team” still works)
 * Functionality of controllers restored
 * Fix crash when 2 or more controllers were connected
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix /hta, /hsa and /hya commands not writing message in chat

Game, audiovisuals:
 + Campaigns and missions now use the user's chosen custom clan colors
 + New default brown clan color for better contrast
 + Allow to change volume during pause
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix some flakes disappearing in world wrap worlds while moving camera